--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.16.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.68.0",
+    "scss": "^0.2.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
